isBlank() error fixed